fix: truncate LocalDateTime to microseconds in vacuum tool repository test
Same nanosecond vs microsecond precision issue as in beekeeper-core tests.
H2 (MySQL mode) truncates DATETIME to microseconds, causing the cleanupTimestamp
round-trip comparison to fail after Java 21 upgrade.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>